# tcr-agent

./: .gitignore  LICENSE  README.md  test_gate22_sample.csv  test_ingest_existing.csv
app/: index.html  package-lock.json  package.json  vite.config.js
app/public/: agent_reasoning_logs.json  batch_reveal_data.json  stats.json
app/src/: App.jsx  api.js  index.css  main.jsx
app/src/components/: AgentLog.jsx  AppSidebar.jsx  CanvasFloatingBar.jsx  DetailPanel.jsx  ExploreTopNav.jsx  MutationHeatmap.jsx  NullDistribution.jsx  PdbViewer.jsx  SidebarPanels.jsx  SynthesisExport.jsx  TcrDetail.jsx  UmapCanvas.jsx
app/src/hooks/: useExploreData.jsx
app/src/pages/: ExplorePage.jsx  IngestPage.jsx  PastChatsPage.jsx
doc/demo/: package.json  pnpm-lock.yaml  slides.md
scripts/: 01_process_tcr_data.py  02_compute_embeddings.py  03_decoder_tcr_scoring.py  04_compute_umap.py  05_export_frontend_data.py  XX_generate_mock.py  deploy_scoring.sh  submit_decoder_scoring.sh  submit_embeddings.sh  sync_predictions.sh  validate_predictions.py
server/: .env.example  main.py  modal_app.py  pyproject.toml
server/core/: chat_stream.py  config.py  esm_embed.py  lifespan.py  worker.py
server/data/: db.py  loaders.py  store.py
server/routers/: annotate.py  chat.py  health.py  mutagenesis.py  null_distribution.py  stats.py  synthesis.py  tcr.py  umap.py  worker.py
server/services/: claude.py  gemini.py  neighbors.py  predictions.py  tamarind.py  tools.py
